# LiteRT

./: .bazeliskrc  .bazelrc  .clang-tidy  .gitattributes  .gitignore  .gitmodules  AGENTS.md  BUILD  BUILD.darts_clone  BUILD.sentencepiece  BUILD.tomlplusplus  BUILD_INSTRUCTIONS.md  CMAKE_BUILD_INSTRUCTIONS.md  CMakeLists.txt  CONTRIBUTING.md  GEMINI.md  NOTES.md  PATCH.flatbuffers_windows_no_bash  PATCH.protobuf_port_msvc_compat  PATCH.rules_python_interpreter_args  PATCH.schema_py_visibility_public  PATCH.sentencepiece  PATCH.tf_xla_tsl_win_copts  PR_TEST.md  Package.swift  README.md  RELEASE.md  SECURITY.md  TENSORFLOW_DEPS.md  TODO.txt  WORKSPACE  android_ndk_env.bzl  android_sdk_env.bzl  backend.isa  build_android_arm64.sh  configure.py  current_session_2025-06-25-11-28-21.md  run_openvino_plugin.bat  test_cla
cmake_example/: CMakeLists.txt  run_model_simple.cc  tflite_minimal.cc
fuzzing/: CMakeLists.txt  README.md
litert/: BUILD  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  COMPILER_PLUGIN.md  CUSTOM_OP_ASSETS.md  DISPATCH_API.md  JIT_COMPILATION.md  METADATA  OWNERS  PATTERN_MATCHING.md  README.md  TESTING.md  __init__.py  _dummy.md  build_litert.sh  litert.bzl  opensource_only.files  reviews.gwsq  tensorflow_source_rules.bzl  version.bzl
litert/ats/: BUILD  README.md  ats.bzl  ats.cc  ats_aot.sh  capture.h  capture_common.h  capture_test.cc  check_ats.cc  common.h  compile_capture.h  compile_capture_test.cc  compile_fixture.h  configure.cc  configure.h  executor.h  executor_test.cc  fixture.h  inference_capture.h  inference_capture_test.cc  inference_fixture.h  print.h  print_test.cc  register.h
litert/build_common/: BUILD  PROJECT.SCL  README.md  build_config.h.in  check_static_initializers.sh  expand_template.bzl  export_litert_gpu_accelerator_darwin.lds  export_litert_gpu_accelerator_linux.lds  export_litert_only_linux.lds  export_litert_runtime_only_darwin.lds  export_litert_runtime_only_linux.lds  export_litert_tflite_runtime_darwin.lds  export_litert_tflite_runtime_linux.lds  flavor_transition.bzl  ios.bzl  litert_build_defs.bzl  special_rule.bzl  strict.default.bzl  symlink_files.bzl  tfl_model_gen.bzl
litert/c/: BUILD  CMakeLists.txt  README.md  empty.cc  litert.pc.in  litert_accelerator.cc  litert_accelerator.h  litert_accelerator_compilation_options.cc  litert_accelerator_compilation_options.h  litert_accelerator_compilation_options_test.cc  litert_accelerator_options.cc  litert_accelerator_options.h  litert_accelerator_options_test.cc  litert_accelerator_registration.cc  litert_accelerator_registration.h  litert_accelerator_registration_test.cc  litert_accelerator_test.cc  litert_any.h  litert_builder.cc  litert_builder.h  litert_builder_test.cc  litert_c_api_common_test.c  litert_common.cc  litert_common.h  litert_common_test.cc  litert_compilation_options.cc  litert_compilation_options.h  litert_compilation_options_test.cc  litert_compiled_model.cc  litert_compiled_model.h  litert_compiled_model_options.cc  litert_compiled_model_options.h  litert_compiled_model_options_test.cc  litert_compiled_model_test.cc  litert_custom_op_kernel.h  litert_custom_op_test.cc  litert_custom_tensor_buffer.h  litert_dispatch_delegate.h  litert_environment.cc  litert_environment.h  (+62 more)
litert/cc/: BUILD  CMakeLists.txt  README.md  litert_accelerator_compilation_options.h  litert_any.h  litert_any_test.cc  litert_api_types.h  litert_buffer_ref.h  litert_buffer_ref_test.cc  litert_c_types_printing.h  litert_c_types_printing_test.cc  litert_common.h  litert_compilation_options.h  litert_compiled_model.cc  litert_compiled_model.h  litert_compiled_model_google_tensor_test.cc  litert_compiled_model_gpu_test.cc  litert_compiled_model_integration_test.cc  litert_compiled_model_jetgpu_test.cc  litert_compiled_model_metal_test.mm  litert_compiled_model_npu_test.cc  litert_compiled_model_qualcomm_test.cc  litert_compiled_model_test.cc  litert_compiled_model_vulkan_test.cc  litert_compiled_model_webgpu_test.cc  litert_consts.h  litert_custom_op_kernel.cc  litert_custom_op_kernel.h  litert_custom_op_test.cc  litert_detail.h  litert_detail_test.cc  litert_dispatch_delegate.h  litert_element_type.h  litert_element_type_test.cc  litert_environment.h  litert_environment_options.h  litert_environment_options_test.cc  litert_environment_test.cc  litert_event.h  litert_event_test.cc  (+66 more)
litert/cc_sdk/: CMakeLists.txt  CMakePresets.json  README.md  litert_cc_sdk_hdrs.txt  litert_cc_sdk_srcs.txt
litert/compiler/: BUILD  CMakeLists.txt
litert/core/: BUILD  CMakeLists.txt  METADATA  README.md  accelerator.cc  accelerator.h  accelerator_model_compilation_data.h  accelerator_model_compilation_data_test.cc  accelerator_test.cc  buffer_error_reporter.cc  buffer_error_reporter.h  build_stamp.cc  build_stamp.h  build_stamp_test.cc  dispatch_bytecode_manifest.cc  dispatch_bytecode_manifest.h  dispatch_op_schema.cc  dispatch_op_schema.h  dispatch_op_schema_test.cc  dynamic_loading.cc  dynamic_loading.h  dynamic_loading_dummy.cc  dynamic_loading_test.cc  dynamic_loading_windows.cc  environment.cc  environment.h  environment_options.cc  environment_options.h  environment_options_test.cc  environment_test.cc  error_reporter.cc  error_reporter.h  error_reporter_test.cc  filesystem.cc  filesystem.h  filesystem_test.cc  insert_order_map.h  insert_order_map_test.cc  litert_toml_parser.cc  litert_toml_parser.h  (+13 more)
litert/cts/: BUILD  compiled_model_executor.h  compiled_model_executor_test.cc  cts.bzl  cts.cc  cts_configure.cc  cts_configure.h  cts_main.cc  register.h
litert/docs/: unowned_buffer_api.md
litert/experimental/: BUILD
litert/google/: BUILD  README.md  apply_plugin.sh  build_torch_sources.py  invoke_qualcomm_test.cc  invoke_qualcomm_util.h  litert_runtime_link_mode.md  litert_scripts.sh  qualcomm_dispatcher_numeric_test.cc  run_test_on_android.sh  script_init.sh
litert/integration_test/: BUILD  cns_pull_model_provider.sh  device_script_common.sh  device_script_template.sh  device_script_test.sh  download_model_provider.sh  (+11 more)
support/: CMakeLists.txt
(+8262 files in other folders)
